--- a/index.html
+++ b/index.html
@@ -108,7 +108,8 @@
             "1Pet": [1, 2, 3, 4, 5],                   // 彼得前书
             "2Pet": [1, 2, 3, 4], 
             "Phlm": [1],
-            "Titus": [1, 2, 3]        
+            "Titus": [1, 2, 3],
+            "Jas": [1, 2, 3, 4, 5]   
         };
         // ==================================
 
