--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <h1>圣经纵览</h1>
             <p class="subtitle" style="font-size: 30px;">Holy Bible Overview</p>
             <br>
-            <p class="subtitle" style="font-size: 14px;">紫色边框-可查看 | 蓝色数字-已添加 | 灰色-待添加</p>
+            <p class="subtitle" style="font-size: 14px;">紫色框-可查看 | 蓝色-已添加 | 灰色-待添加</p>
             <p class="subtitle" style="font-size: 14px;">横屏观看效果更佳</p>
         </header>
 
