20251213普通书信除希书外

--- a/index.html
+++ b/index.html
@@ -93,23 +93,29 @@
         </div>
 
         <footer>
-            © 2025 AI生成模版 | 内容有待修订，仅供参考<br>
+            © 2025 圣经纵览 | 内容仅供学习参考<br>
+            <a href="config/disclaimer.html" target="_blank">网站使用与免责声明</a>
         </footer>
     </div>
 
     <script>
         // ========== 手动配置区域 ==========
-        // 配置每个书籍有哪些章节文件存在
-        // 格式：书籍缩写: [章节数字数组]
-        // 例如：1Pet 有第1章和第2章，就写成 "1Pet": [1, 2]
         const availableChapters = {
-            "1Tim": [1, 2, 3, 4, 5, 6],      // 提摩太前书：全部6章
-            "2Tim": [1, 2, 3, 4],            // 提摩太后书：全部4章
-            "1Pet": [1, 2, 3, 4, 5],                   // 彼得前书
-            "2Pet": [1, 2, 3, 4], 
-            "Phlm": [1],
-            "Titus": [1, 2, 3],
-            "Jas": [1, 2, 3, 4, 5]   
+            // 保罗书信
+            "Rom":   Array.from({ length: 1 }, (_, i) => i + 1), // 罗马书
+        
+            "1Tim":  [1, 2, 3, 4, 5, 6],                          // 提摩太前书
+            "2Tim":  [1, 2, 3, 4],                                // 提摩太后书
+            "Titus": [1, 2, 3],                                   // 提多书
+            "Phlm":  [1],                                         // 腓利门书
+
+            "Jas":   [1, 2, 3, 4, 5],                              // 雅各书
+            "1Pet":  [1, 2, 3, 4, 5],                              // 彼得前书
+            "2Pet":  [1, 2, 3],                                    // 彼得后书
+            "1John": Array.from({ length: 5 }, (_, i) => i + 1),  // 约翰一书
+            "2John": [1],                                         // 约翰二书
+            "3John": [1],                                         // 约翰三书
+            "Jude":  [1]                                        // 犹大书
         };
         // ==================================
 
