--- a/index_副本.html
+++ b/index_副本.html
@@ -94,8 +94,7 @@
 
         <footer>
             © 2025 圣经纵览 | 内容仅供学习参考<br>
-            <a href="config/disclaimer.html" target="_blank">网站使用说明与免责声明</a><br>
-            本站总访问量：<span id="busuanzi_value_site_pv">—</span>
+            <a href="config/disclaimer.html" target="_blank">网站使用与免责声明</a>
         </footer>
     </div>
 
@@ -258,8 +257,5 @@
 
         renderBooks();
     </script>
-
-    <script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
-
 </body>
 </html>
