完成所有普通书信

--- a/index.html
+++ b/index.html
@@ -110,6 +110,8 @@
             "Titus": [1, 2, 3],                                   // 提多书
             "Phlm":  [1],                                         // 腓利门书
 
+            // 普通书信（大公书信）
+            "Heb":   Array.from({ length: 13 }, (_, i) => i + 1), // 希伯来书
             "Jas":   [1, 2, 3, 4, 5],                              // 雅各书
             "1Pet":  [1, 2, 3, 4, 5],                              // 彼得前书
             "2Pet":  [1, 2, 3],                                    // 彼得后书
