更新罗马书和以弗所书

--- a/index.html
+++ b/index.html
@@ -102,15 +102,17 @@
     <script>
         // ========== 手动配置区域 ==========
         const availableChapters = {
+            
             // 保罗书信
             "Rom":   Array.from({ length: 16 }, (_, i) => i + 1), // 罗马书
-        
+            "Eph":   Array.from({ length: 6 },  (_, i) => i + 1), // 以弗所书
+
             "1Tim":  [1, 2, 3, 4, 5, 6],                          // 提摩太前书
             "2Tim":  [1, 2, 3, 4],                                // 提摩太后书
             "Titus": [1, 2, 3],                                   // 提多书
             "Phlm":  [1],                                         // 腓利门书
 
-            // 普通书信（大公书信）
+            //普通书信
             "Heb":   Array.from({ length: 13 }, (_, i) => i + 1), // 希伯来书
             "Jas":   [1, 2, 3, 4, 5],                              // 雅各书
             "1Pet":  [1, 2, 3, 4, 5],                              // 彼得前书
