更新罗all弗all马1

--- a/index.html
+++ b/index.html
@@ -102,7 +102,10 @@
     <script>
         // ========== 手动配置区域 ==========
         const availableChapters = {
-            
+
+            // 四福音
+            "Matt":  Array.from({ length: 1 }, (_, i) => i + 1), // 马太福音 28
+
             // 保罗书信
             "Rom":   Array.from({ length: 16 }, (_, i) => i + 1), // 罗马书
             "Eph":   Array.from({ length: 6 },  (_, i) => i + 1), // 以弗所书
