新增留言板，测试...

--- a/index.html
+++ b/index.html
@@ -94,7 +94,8 @@
 
         <footer>
             © 2025 圣经纵览 | 内容仅供学习参考<br>
-            <a href="config/disclaimer.html" target="_blank">网站使用说明与免责声明</a><br>
+            <a href="config/disclaimer.html" target="_blank">网站使用说明与免责声明</a> ｜
+            <a href="config/Guestbook.html">留言板</a><br>
             本站总访问量：<span id="busuanzi_value_site_pv">—</span>
         </footer>
     </div>
