保罗书信第3次更新

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
         <footer>
             © 2025 圣经纵览 | 内容仅供学习参考<br>
-            <a href="config/disclaimer.html" target="_blank">网站使用说明与免责声明</a> ｜
+            <a href="config/disclaimer.html" target="_blank">免责声明</a> ｜
             <a href="config/Guestbook.html">留言板</a><br>
             本站总访问量：<span id="busuanzi_value_site_pv">—</span>
         </footer>
@@ -106,10 +106,24 @@
 
             // 四福音
             "Matt":  Array.from({ length: 1 }, (_, i) => i + 1), // 马太福音 28
+        //    "Mark":  Array.from({ length: 16 }, (_, i) => i + 1), // 马可福音 16
+        //    "Luke":  Array.from({ length: 24 }, (_, i) => i + 1), // 路加福音 24
+         //   "John":  Array.from({ length: 21 }, (_, i) => i + 1), // 约翰福音 21
 
+             // 使徒行传
+           // "Acts":  Array.from({ length: 28 }, (_, i) => i + 1), // 使徒行传 28
+            
             // 保罗书信
             "Rom":   Array.from({ length: 16 }, (_, i) => i + 1), // 罗马书
+
+         //   "1Cor":  Array.from({ length: 16 }, (_, i) => i + 1), // 哥林多前书
+        //    "2Cor":  Array.from({ length: 13 }, (_, i) => i + 1), // 哥林多后书
+        //    "Gal":   Array.from({ length: 6 },  (_, i) => i + 1), // 加拉太书
             "Eph":   Array.from({ length: 6 },  (_, i) => i + 1), // 以弗所书
+         //   "Phil":  Array.from({ length: 4 },  (_, i) => i + 1), // 腓立比书
+            "Col":   Array.from({ length: 4 },  (_, i) => i + 1), // 歌罗西书
+            "1Thess":Array.from({ length: 5 },  (_, i) => i + 1), // 帖撒罗尼迦前书
+            "2Thess":Array.from({ length: 3 },  (_, i) => i + 1), // 帖撒罗尼迦后书
 
             "1Tim":  [1, 2, 3, 4, 5, 6],                          // 提摩太前书
             "2Tim":  [1, 2, 3, 4],                                // 提摩太后书
@@ -124,7 +138,10 @@
             "1John": Array.from({ length: 5 }, (_, i) => i + 1),  // 约翰一书
             "2John": [1],                                         // 约翰二书
             "3John": [1],                                         // 约翰三书
-            "Jude":  [1]                                        // 犹大书
+            "Jude":  [1],                                        // 犹大书
+
+            // 启示录
+           // "Rev":   Array.from({ length: 22 }, (_, i) => i + 1)  // 启示录
         };
         // ==================================
 
