--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
         //    "2Cor":  Array.from({ length: 13 }, (_, i) => i + 1), // 哥林多后书
         //    "Gal":   Array.from({ length: 6 },  (_, i) => i + 1), // 加拉太书
             "Eph":   Array.from({ length: 6 },  (_, i) => i + 1), // 以弗所书
-         //   "Phil":  Array.from({ length: 4 },  (_, i) => i + 1), // 腓立比书
+            "Phil":  Array.from({ length: 4 },  (_, i) => i + 1), // 腓立比书
             "Col":   Array.from({ length: 4 },  (_, i) => i + 1), // 歌罗西书
             "1Thess":Array.from({ length: 5 },  (_, i) => i + 1), // 帖撒罗尼迦前书
             "2Thess":Array.from({ length: 3 },  (_, i) => i + 1), // 帖撒罗尼迦后书
