约翰福音，双语版

--- a/@Config/Guestbook.html
+++ b/@Config/Guestbook.html
@@ -41,9 +41,9 @@ button {
 <body>
 
 <div class="container">
+    <h1>正在开发中，敬请期待...</h1>
     <h1>留言板 Guestbook</h1>
-    <p>欢迎留言，彼此勉励。</p>
-
+    <p>欢迎留言，彼此勉励</p>
     <input id="name" placeholder="你的名字（可留空）">
     <textarea id="content" placeholder="留言内容"></textarea>
     <button onclick="addMessage()">提交留言</button>
