--- a/Phil/Phil4.html
+++ b/Phil/Phil4.html
@@ -160,8 +160,8 @@
                 summary_en: "Chapter 4 is the climax of Paul's letter. He addresses internal discord (Euodia and Syntyche) and then offers the ultimate prescription for anxiety: prayer and thanksgiving. Paul shares his famous 'secret of contentment,' declaring victory in all circumstances through Christ. This chapter grounds profound theology in practical mental health (peace) and material life (contentment).",
                 concepts: [
                     { title: "平安", title_en: "Peace", greek: "Eirēnē", color: "text-sky-600", desc_zh: "像哨兵一样保守心怀意念。", desc_en: "Guarding hearts and minds like a sentinel." },
-                    { title: "思念", title_en: "Think On", greek: "Logizesthe", color: "text-indigo-600", desc: "精密地计算、考量、评价。", desc_en: "To reckon, calculate, or dwell upon." },
-                    { title: "知足", title_en: "Content", greek: "Autarkēs", color: "text-amber-600", desc: "自给自足，不假外求（因有基督）。", desc_en: "Self-sufficient, independent of circumstances." }
+                    { title: "思念", title_en: "Think On", greek: "Logizesthe", color: "text-indigo-600", desc_zh: "精密地计算、考量、评价。", desc_en: "To reckon, calculate, or dwell upon." },
+                    { title: "知足", title_en: "Content", greek: "Autarkēs", color: "text-amber-600", desc_zh: "自给自足，不假外求（因有基督）。", desc_en: "Self-sufficient, independent of circumstances." }
                 ]
             },
             sections: [
@@ -194,6 +194,11 @@
                                 title: "谦让 (Epieikes) 的末世论背景",
                                 content_zh: "'谦让'很难翻译，意为'通情达理'、'不坚持己权'、'宽容'。之所以要这样，是因为'主已经近了'（The Lord is near）。这是一个双关语：既指主在空间上就在旁边（同在），也指主在时间上快要再来（审判）。既然审判官快到了，我们就不必急着为自己伸冤。",
                                 content_en: "'Epieikes' (reasonableness/gentleness) means not insisting on one's rights. The motivation is eschatological: 'The Lord is near' (spatially present and temporally coming soon). Since the Judge is at the door, we need not vindicate ourselves."
+                            },
+                            devotional: {
+                                title: "让出审判座 (Yielding the Judge's Seat)",
+                                content_zh: "保罗要求我们展现“谦让的心”，其动力不是因为我们性格软弱，而是因为“主已经近了”。这包含两层安慰：第一，主就在你身边，祂看见了你的委屈，所以你不需要靠大声嚷嚷来保护自己；第二，审判的主快要再来，祂会亲自衡量是非，所以你不需要急着充当别人的审判官。当你愿意“不坚持权利”时，你实际上是在表达对神主权的最高信任。",
+                                content_en: "Paul’s call for 'gentleness' is powered by the fact that 'the Lord is at hand.' This offers two-fold comfort: First, the Lord is right beside you, so you don't need to shout to protect yourself. Second, the Judge is coming soon, so you don't need to play the judge for others. When you choose not to insist on your rights, you are expressing ultimate trust in God’s sovereignty."
                             }
                         }
                     ]
