--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
 
         <footer>
             © 2025 圣经纵览 | 内容仅供学习参考<br>
-            <a href="config/disclaimer.html" target="_blank">免责声明</a> ｜
-            <a href="config/Guestbook.html">留言板</a><br>
+            <a href="@Config/disclaimer.html" target="_blank">免责声明</a> ｜
+            <a href="@Config/Guestbook.html">留言板</a><br>
             本站总访问量：<span id="busuanzi_value_site_pv">—</span>
         </footer>
     </div>
@@ -105,10 +105,10 @@
         const availableChapters = {
 
             // 四福音
-            "Matt":  Array.from({ length: 1 }, (_, i) => i + 1), // 马太福音 28
+        //    "Matt":  Array.from({ length: 28 }, (_, i) => i + 1), // 马太福音 28
         //    "Mark":  Array.from({ length: 16 }, (_, i) => i + 1), // 马可福音 16
         //    "Luke":  Array.from({ length: 24 }, (_, i) => i + 1), // 路加福音 24
-         //   "John":  Array.from({ length: 21 }, (_, i) => i + 1), // 约翰福音 21
+           "John":  Array.from({ length: 21 }, (_, i) => i + 1), // 约翰福音 21
 
              // 使徒行传
            // "Acts":  Array.from({ length: 28 }, (_, i) => i + 1), // 使徒行传 28
@@ -116,9 +116,9 @@
             // 保罗书信
             "Rom":   Array.from({ length: 16 }, (_, i) => i + 1), // 罗马书
 
-         //   "1Cor":  Array.from({ length: 16 }, (_, i) => i + 1), // 哥林多前书
-        //    "2Cor":  Array.from({ length: 13 }, (_, i) => i + 1), // 哥林多后书
-        //    "Gal":   Array.from({ length: 6 },  (_, i) => i + 1), // 加拉太书
+            "1Cor":  Array.from({ length: 16 }, (_, i) => i + 1), // 哥林多前书
+            "2Cor":  Array.from({ length: 13 }, (_, i) => i + 1), // 哥林多后书
+        //  "Gal":   Array.from({ length: 6 },  (_, i) => i + 1), // 加拉太书
             "Eph":   Array.from({ length: 6 },  (_, i) => i + 1), // 以弗所书
             "Phil":  Array.from({ length: 4 },  (_, i) => i + 1), // 腓立比书
             "Col":   Array.from({ length: 4 },  (_, i) => i + 1), // 歌罗西书
