使徒，林后，约书亚，部分，双语

--- a/index.html
+++ b/index.html
@@ -104,14 +104,17 @@
         // ========== 手动配置区域 ==========
         const availableChapters = {
 
+            // 历史书
+            "Josh":  Array.from({ length: 24 }, (_, i) => i + 1), // 约书亚记 24
+
             // 四福音
         //    "Matt":  Array.from({ length: 28 }, (_, i) => i + 1), // 马太福音 28
         //    "Mark":  Array.from({ length: 16 }, (_, i) => i + 1), // 马可福音 16
         //    "Luke":  Array.from({ length: 24 }, (_, i) => i + 1), // 路加福音 24
-           "John":  Array.from({ length: 21 }, (_, i) => i + 1), // 约翰福音 21
+            "John":  Array.from({ length: 21 }, (_, i) => i + 1), // 约翰福音 21
 
              // 使徒行传
-           // "Acts":  Array.from({ length: 28 }, (_, i) => i + 1), // 使徒行传 28
+            "Acts":  Array.from({ length: 28 }, (_, i) => i + 1), // 使徒行传 28
             
             // 保罗书信
             "Rom":   Array.from({ length: 16 }, (_, i) => i + 1), // 罗马书
