林后，启示录

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
             "Jude":  [1],                                        // 犹大书
 
             // 启示录
-           // "Rev":   Array.from({ length: 22 }, (_, i) => i + 1)  // 启示录
+            "Rev":   Array.from({ length: 22 }, (_, i) => i + 1)  // 启示录
         };
         // ==================================
 
