--- a/Config/disclaimer.html
+++ b/Config/disclaimer.html
@@ -214,7 +214,7 @@
         }
     </style>
 </head>
-<body>
+<body class="dark-mode">
 
     <header>
         <div class="header-content">
@@ -222,7 +222,7 @@
             <p class="header-subtitle">Website Use and Disclaimer</p>
         </div>
         <button class="theme-toggle" onclick="toggleTheme()" aria-label="切换主题">
-            <span id="theme-icon">☀</span>
+            <span id="theme-icon">🌙</span>
         </button>
     </header>
 
