--- a/index.html
+++ b/index.html
@@ -252,11 +252,11 @@
 
         /* 旧约图片 - 使用本地配置 */
         #ot-header .section-header-bg {
-            background-image: url('config/oldbooks.jpg'); 
+            background-image: url('Config/oldbooks.jpg'); 
         }
         /* 新约图片 - 使用本地配置 */
         #nt-header .section-header-bg {
-            background-image: url('config/sunrise.jpg'); 
+            background-image: url('Config/sunrise.jpg'); 
         }
 
         /* 渐变遮罩，保证文字清晰 */
