--- a/index.html
+++ b/index.html
@@ -563,7 +563,7 @@
     <header>
         <div class="header-content">
             </br><h1 class="header-title">圣经纵览｜BibleView</h1>
-            </br><p class="header-subtitle">横屏观看效果更佳</p>
+            <p class="header-subtitle">横屏观看效果更佳</p>
         </div>
         <button class="theme-toggle" onclick="toggleTheme()" aria-label="切换主题">
             <span id="theme-icon">🌙</span>
@@ -655,6 +655,8 @@
 
             // 四福音
             "Matt":  Array.from({ length: 28 }, (_, i) => i + 1), 
+            //"Mark":  Array.from({ length: 16 }, (_, i) => i + 1), // 马可福音 16
+            "Luke":  Array.from({ length: 24 }, (_, i) => i + 1), // 路加福音 24
             "John":  Array.from({ length: 21 }, (_, i) => i + 1), 
 
              // 使徒行传
